refactored monitors to remove visitor